{
    "name": "ControlsActionMap",
    "maps": [
        {
            "name": "PlayerMovement",
            "id": "4330bc90-876a-4240-aab0-66a6f923b7dd",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Button",
                    "id": "f0aa58b8-ef45-4819-99d8-f6ed38da2317",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "185220d2-37d8-4013-8bc1-75895815caeb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Forward",
                    "id": "896e15e0-d1c5-4dc9-a6a6-89fb0edfb53c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5ff6eb36-c280-4b07-bce6-e53d5857278a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "20f7a910-b259-4af2-ab8d-9735a81f1c85",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "7098a02c-75cb-42c1-89c6-aaec78b2b692",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4c2c8f78-27ba-4e0c-b81d-5b7ba7659ec5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1a16e863-1b89-47f3-bf43-cd86f673d341",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "DebugControls",
            "id": "e54788ef-ea56-4ee7-921d-5ef87db1e8c6",
            "actions": [
                {
                    "name": "CameraToggle",
                    "type": "Button",
                    "id": "5e4f5f83-ef18-42d9-a9d2-ac9294d156aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CreateRandomItem",
                    "type": "Button",
                    "id": "72d7fa37-c636-4b3d-a3a1-c0abcb223bcf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eee0fefe-f643-4b48-8d87-d3b8b709cc9a",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a6db0c6-69f9-4ccc-9610-e3a4764b8f99",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CreateRandomItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Inventory",
            "id": "0c791dbe-20ea-47ee-96a0-d5f30857e53c",
            "actions": [
                {
                    "name": "ToggleInventory",
                    "type": "Button",
                    "id": "fb148531-f80b-4448-9d04-3bcc88598ff3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RotateItem",
                    "type": "Button",
                    "id": "97dec816-8ff3-4e2e-8a92-9a3186bd5873",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClickInventory",
                    "type": "Button",
                    "id": "0c6e2530-ed4f-4920-9285-8966f733a156",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "5adac0ac-9b1e-454a-b3f1-bdea760ab44c",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "52fbe87b-25be-4ca3-b7a6-34c7d11ff01e",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4fb0487-727a-4afa-b65d-7a35d8a1073d",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1b1edc50-dd4b-4d6d-9e43-ae9d372df7d3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ClickInventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77c7f7a6-dcc3-4518-879e-123f01513874",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}